--- a/Big_Data_Project_GroupA/BDA Project.ipynb
+++ b/Big_Data_Project_GroupA/BDA Project.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> To see what our data set looks like we used <b>head()</b> to display the first five rows of the dataframe.</p>"
+    "<p> To see what the data set looks like I used <b>head()</b> to display the first five rows of the dataframe.</p>"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> We also checked the number of rows and columns in our dataframe using the <b>shape</b> method.</p>"
+    "<p> I also checked the number of rows and columns in the dataframe using the <b>shape</b> method.</p>"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We decided to drop the Serial No. column using <b>.drop()</b> as it serves no real purpose for data analysis."
+    "I decided to drop the Serial No. column using <b>.drop()</b> as it serves no real purpose for data analysis."
    ]
   },
   {
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used the describe method to uderstand our dataframe better."
+    "I used the describe method to understand the dataframe better."
    ]
   },
   {
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's always important to know the correlation between each element in a data set in order to uderstand the degree of association between two variables. Thus, we also checked the correlation between the elements in our data set using corr()."
+    "It's always important to know the correlation between each element in a data set in order to understand the degree of association between two variables. Thus, I also checked the correlation between the elements in the data set using corr()."
    ]
   },
   {
@@ -702,7 +702,7 @@
    "source": [
     "<h4>Evaluating for Missing Data</h4>\n",
     "\n",
-    "We used Python's built-in functions to identify these missing values. There are two methods to detect missing data:\n",
+    "I used Python's built-in functions to identify these missing values. There are two methods to detect missing data:\n",
     "<ol>\n",
     "    <li><b>.isnull()</b></li>\n",
     "    <li><b>.notnull()</b></li>\n",
@@ -845,7 +845,7 @@
    "source": [
     "<h4>Count missing values in each column</h4>\n",
     "<p>\n",
-    "Using a for loop in Python, we figured out the number of missing values in each column. As mentioned above, \"True\" represents a missing value, \"False\"  means the value is present in the dataset.  In the body of the for loop the method  \".value_counts()\"  counts the number of \"True\" values. \n",
+    "Using a for loop in Python, I figured out the number of missing values in each column. As mentioned above, \"True\" represents a missing value, \"False\"  means the value is present in the dataset.  In the body of the for loop the method  \".value_counts()\"  counts the number of \"True\" values. \n",
     "</p>"
    ]
   },
@@ -1277,7 +1277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen from the box plots there seem to be outliers in LOR and Chance of Admit Values. We used Interquartile range rule for outliers to remove outliers."
+    "As seen from the box plots there seem to be outliers in LOR and Chance of Admit Values. I used Interquartile range rule for outliers to remove outliers."
    ]
   },
   {
@@ -1551,7 +1551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we are aiming to predict the chance of admit. We choose our three modeling algorithms to be: Linear Regression, Polynomial Regerssion and Ridge Regression."
+    "Since I am aiming to predict the chance of admit, I choose the three modeling algorithms to be: Linear Regression, Polynomial Regerssion and Ridge Regression."
    ]
   },
   {
@@ -1774,7 +1774,7 @@
    "metadata": {},
    "source": [
     "Creating Train & Test dataset:\n",
-    "We split our dataset into train and test sets, 80% of the entire data for training, and the 20% for testing. We created a mask to select random rows using np.random.rand() function"
+    "I split our dataset into train and test sets, 80% of the entire data for training, and the 20% for testing. I created a mask to select random rows using np.random.rand() function"
    ]
   },
   {
@@ -1915,14 +1915,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>fit_transform()</b> takes the x values, and output a list of the data raised from power of 0 to 4 (since in our case we set the degree of our polynomial to 4)."
+    "<b>fit_transform()</b> takes the x values, and output a list of the data raised from power of 0 to 4 (since in this case I set the degree of the polynomial to 4)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used <b>LinearRegression()</b> function to treat polynomial regression as linear regression so that we could analyze this model easily. "
+    "I used <b>LinearRegression()</b> function to treat polynomial regression as linear regression so that I could analyze this model easily."
    ]
   },
   {
@@ -2219,7 +2219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see from the above dataframe all three models are good models to predict the chance of admit. But the best model amongst the 3 models is Multiple linear regression model since it has lowest mean absolute error as well as lowest mean squared error and the highest R2-Score. Polynomial regression has no mean squared error but it has higher mean absolute error and lower R2-Score when compared to multiple linear regression model. In case of regression tree it has higher mean absolute error and higher mean squared error than multiple linear regression and polynomial regression. It also has lowest R2-Score, hence it is not the best model when compared with other two. Thus, after comparing all three models we concluded that multiple linear regression is the best model. Also, we found out that GRE,TOEFL Scores and CGPA are really important variables in obtaining an admit from the university as higher GRE/TOEFL scores and higher CGPA would lead to greater chances of getting admit from a university."
+    "As we can see from the above dataframe all three models are good models to predict the chance of admit. But the best model amongst the 3 models is Multiple linear regression model since it has lowest mean absolute error as well as lowest mean squared error and the highest R2-Score. Polynomial regression has no mean squared error but it has higher mean absolute error and lower R2-Score when compared to multiple linear regression model. In case of regression tree it has higher mean absolute error and higher mean squared error than multiple linear regression and polynomial regression. It also has lowest R2-Score, hence it is not the best model when compared with other two. Thus, after comparing all three models I concluded that multiple linear regression is the best model. Also, I found out that GRE,TOEFL Scores and CGPA are really important variables in obtaining an admit from the university as higher GRE/TOEFL scores and higher CGPA would lead to greater chances of getting admit from a university."
    ]
   },
   {
@@ -2400,7 +2400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating Train & Test dataset: We split our dataset into train and test sets, 80% of the entire data for training, and the 20% for testing. We created a mask to select random rows using np.random.rand() function"
+    "Creating Train & Test dataset: I split the dataset into train and test sets, 80% of the entire data for training, and the 20% for testing. I created a mask to select random rows using np.random.rand() function"
    ]
   },
   {
@@ -2537,7 +2537,7 @@
    "source": [
     "fit_transform() takes the x values, and output a list of the data raised from power of 0 to 4 (since in our case we set the degree of our polynomial to 4).\n",
     "\n",
-    "We used LinearRegression() function to treat polynomial regression as linear regression so that we could analyze this model easily."
+    "I used LinearRegression() function to treat polynomial regression as linear regression so that I could analyze this model easily."
    ]
   },
   {
@@ -2721,7 +2721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see by comparing our polynomial regression models that building a model with degree 12 has lower R2-Score (-0.01) but the MAE and MSE is really high which means that the model captures noise and it is a case of overfitting. Hence, we choose model with degree 4 for our final comparison. "
+    "We can see by comparing our polynomial regression models that building a model with degree 12 has lower R2-Score (-0.01) but the MAE and MSE is really high which means that the model captures noise and it is a case of overfitting. Hence, I choose model with degree 4 for our final comparison. "
    ]
   },
   {
@@ -3102,7 +3102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating Train & Test dataset: We split our dataset into train and test sets, 80% of the entire data for training, and the 20% for testing. We created a mask to select random rows using np.random.rand() function"
+    "Creating Train & Test dataset: I split the dataset into train and test sets, 80% of the entire data for training, and the 20% for testing. I created a mask to select random rows using np.random.rand() function"
    ]
   },
   {
@@ -3546,7 +3546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see from the above dataframe all three models are decent models to predict the chance of admit. But the best model amongst the 3 models is Multiple linear regression model since it has lowest mean absolute error as well as lowest mean squared error and the highest R2-Score. Polynomial regression has lower mean squared error and lower mean absolute error but lower R2-Score when compared to regression tree model. In case of regression tree it has higher mean absolute error and higher mean squared error than multiple linear regression. It also has lower R2-Score, hence it is not the best model when compared with linear regression model. Thus, after comparing all three models we concluded that multiple linear regression is the best model. Also, we found out that considering all variables for prediction does not lead to higher accuracy results as we got a model with better fit when we considered only GRE Score, TOEFL Score and CGPA."
+    "As we can see from the above dataframe all three models are decent models to predict the chance of admit. But the best model amongst the 3 models is Multiple linear regression model since it has lowest mean absolute error as well as lowest mean squared error and the highest R2-Score. Polynomial regression has lower mean squared error and lower mean absolute error but lower R2-Score when compared to regression tree model. In case of regression tree it has higher mean absolute error and higher mean squared error than multiple linear regression. It also has lower R2-Score, hence it is not the best model when compared with linear regression model. Thus, after comparing all three models I concluded that multiple linear regression is the best model. Also, I found out that considering all variables for prediction does not lead to higher accuracy results as we got a model with better fit when I considered only GRE Score, TOEFL Score and CGPA."
    ]
   },
   {
